# rusty

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: main.cpp
include/profiler/: AutoProfileScope.hpp  FixedString.hpp  ProfileScope.hpp  ProfilerRegistry.hpp
src/: ProfilerRegistry.cpp
